test/data/semantic-errors/type-mismatch-return-value.ava
var firstFunction = () -> return "hello";

var secondFunction = (x:int) -> return x + 1;

secondFunction(firstFunction());